fix usage of now-deprecated API in RandomizerGUI, some other language problems